portfolio/css/media.css
:root {
  --primary-font-family: 'Merriweather', serif;
  --secondary-font-family: 'Inter', sans-serif;
  --bg-color: #000000;
  --main-color: #ffffff;
  --gold-color: #bdae82;
  --bold-font-weight: 700;
  --normal-font-weight: 400;
}

@media screen and (max-width: 1439px) {
  .main {
    width: 100vw;
  }
  .hero {
    background-size: auto 880px;
  }
  .header__logo {
    margin-right: calc(100vw - 49%);
  }
  .skills__items {
    width: 98%;
  }
  .skills__item:nth-child(2),
  .skills__item:nth-child(3),
  .skills__item:nth-child(4) {
    margin-left: 30px;
  }
  .price__item {
    width: 30vw;
  }
}

@media screen and (max-width: 1300px) {
  .header__logo {
    margin-right: calc(100vw - 52%);
  }
  .header__nav-item:nth-child(5) {
    margin-right: 25px;
  }
  .header__nav-item:nth-child(even) {
    margin-right: 25px;
    margin-left: 25px;
  }
  .skills__item {
    width: 300px;
  }
  .skills__item:nth-child(2),
  .skills__item:nth-child(3),
  .skills__item:nth-child(4) {
    margin-left: 25px;
  }
  .skills__item-text {
    width: 270px;
  }
  .contacts {
    height: 654px;
  }
}

@media screen and (max-width: 1170px) {
  .hero {
    height: 793px;
    background-size: auto 820px;
    background-position: -10px -27px;
  }
  .header__logo {
    margin-right: calc(100vw - 59%);
  }
  .header__nav-item:nth-child(5) {
    margin-right: 20px;
  }
  .header__nav-item:nth-child(even) {
    margin-right: 20px;
    margin-left: 20px;
  }
  .skills {
    height: 670px;
  }
  .skills::before {
    content: '';
    width: 464px;
    top: 102px;
  }
  .title {
    width: 152px;
    padding-top: 80px;
    font-size: 32px;
    line-height: 40px;
  }
  .skills__items {
    flex-wrap: wrap;
    width: 70%;
    margin-top: 36px;
  }
  .skills__item:nth-child(3),
  .skills__item:nth-child(4) {
    margin-top: 36px;
  }
  .skills__item:nth-child(3) {
    margin-left: 0px;
  }
  .portfolio::before {
    content: '';
    width: 464px;
    top: 102px;
  }
  .portfolio__title {
    width: 220px;
  }
  .video::before,
  .price::before {
    content: '';
    width: 464px;
    top: 102px;
  }
  .contacts {
    height: 530px;
    background-size: cover;
    background-position-x: center;
  }
  .contacts__title {
    width: 200px;
  }
}

@media screen and (max-width: 1000px) {
  .hero {
    background-size: auto 800px;
    background-position: -85px -27px;
  }
  .header__logo {
    margin-right: calc(100vw - 70%);
  }
  .hero__content {
    margin-top: 140px;
    margin-left: 60px;
    width: 450px;
  }
  .hero__content-text {
    width: 420px;
  }
  .skills {
    height: 700px;
  }
  .skills__items {
    width: 90%;
  }
  .portfolio__wrapper-btn {
    display: flex;
    width: 445px;
    flex-wrap: wrap;
    gap: 5px;
  }
  .video__player {
    height: 555px;
  }
  .video__player-btn {
    height: 555px;
  }
  .price {
    height: 1845px;
  }
  .price__items {
    flex-direction: column;
    margin-top: 68px;
  }
  .price__item {
    width: 400px;
  }
  .price__item:nth-child(2) {
    margin: 50px 0;
  }
}

@media screen and (max-width: 830px) {
  .hero {
    height: 616px;
    background-size: auto 700px;
    background-position: -50px -27px;
  }
  .header__logo {
    margin-right: calc(100vw - 77%);
  }
  .hero__content-title {
    font-weight: var(--normal-font-weight);
    font-size: 32px;
    line-height: 64px;
  }
  .hero__content-text {
    width: 390px;
    line-height: 28px;
  }
}
/* ... */

